[NEW $ FIX] add FR.APL.01 (PERMOHONAN SERTIFIKASI KOMPETENSI); fix major and dsahboard (comment)
